samples/_failures_safe/1761706880_9fa584_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19d31579.c: In function ‘main’:
./samples/SAFE/__tmp_19d31579.c:136:12: error: missing terminating " character
  136 |     printf("\nMatrix multiplication
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_19d31579.c:136:5: error: expected expression at end of input
  136 |     printf("\nMatrix multiplication
      |     ^~~~~~
./samples/SAFE/__tmp_19d31579.c:136:5: error: expected declaration or statement at end of input
